# ChurchLink

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  MY_EVENTS_PLAN.md  PAYPAL_SETUP_GUIDE.md  README.md  THIRD_PARTY_NOTICES.md  linter.yaml  makefile  my_events_app.md  my_events_web.md  my_events_web_summary.md  package-lock.json  package.json  pnpm-lock.yaml  run_all_dev.bat  run_all_dev.sh  run_all_production.bat  run_tests.bat
backend/: .dockerignore  .env  .env.email.template  .env.example  .gitignore  Dockerfile  README.md  SSBC_DB-pages.json  add_roles.py  backend.code-workspace  cleanup_event_data.py  database.py  decrypted_data.json  drop_schemas.js  drop_schemas.py  firebase_auth.py  get_bearer_token.py  give_admin.py  main.py  makefile  pyproject.toml  pytest.ini  settings.json  users.db
backend/APIs/: youtube.py
backend/BulkTranslator/: BulkTranslator.py  __init__.py
backend/backend/: .env.example  README.md  main.py  pyproject.toml
backend/config/: settings.py
backend/controllers/: assets_controller.py  bulletin_functions.py  donation_controller.py  event_functions.py  financial_report_controller.py  form_payment_controller.py  permissions_functions.py  refund_request_controller.py  sermon_functions.py  service_bulletin_functions.py  strapi_uploads.py  strapi_user_management.py  transactions_controller.py  users_functions.py
backend/crypt/: .gitignore  age.env  decrypt.py  keys.json
backend/dev_tools/: README.md  webhook_monitor.py
backend/docs/: PayPal_Webhook_Production_Setup.md
backend/firebase/: firebase_credentials.py
backend/helpers/: AppConfigHelper.py  BiblePlanNotificationHelper.py  BiblePlanScheduler.py  DB.py  DashboardAppConfigHelper.py  DonationPlanHelper.py  EventPublisherLoop.py  Firebase_helpers.py  MongoHelper.py  (+20 more)
(+1300 files in other folders)
