[project]
name = "Church-Link"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.115.11",
    "firebase-admin>=6.7.0",
    "google-api-python-client>=2.164.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "httpx>=0.28.1",
    "motor>=3.7.0",
    "python-dotenv>=1.0.1",
    "scalar-fastapi>=1.0.3",
    "uvicorn>=0.34.0",
]
