[project]
name = "Church-Link"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.115.11",
    "firebase-admin>=6.7.0",
    "pydantic[email]>=2.10.6",
    "motor>=3.7.0",
    "pymongo>=4.11.2",
    "python-dotenv>=1.0.1",
    "google-api-python-client>=2.164.0",
    "httpx>=0.28.1",
    "scalar-fastapi>=1.0.3",
    "uvicorn>=0.34.0",
    "paypal-server-sdk>=1.0.0",
    "faker>=37.1.0",
    "paypalrestsdk>=1.13.3",
    "pytest>=8.4.2",
    "pydantic-settings>=2.11.0",
    "windows-curses>=2.4.1; sys_platform == 'win32'",
    "pytz>=2024.2",
]
